--- a/fileTests/inFiles/test2.in
+++ b/fileTests/inFiles/test2.in
@@ -1,3 +1,3 @@
-Daniel Sorcerer Responsible
-Regev Sorcerer RiskTaking
-Baraa Sorcerer RiskTaking
+Wongi Warrior RiskTaking
+Alex Sorcerer RiskTaking
+Almog Sorcerer RiskTaking
